force-app/main/default/objects/numm__Solde_releve_banque__c/numm__Solde_releve_banque__c.object-meta.xml
<CustomObject>
    <label>Solde relevé de banque</label>
    <nameField>
        <displayFormat>SRB-{000000}</displayFormat>
        <label>Solde relevé de banque</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Soldes relevé de banque</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>