force-app/main/default/objects/numm__Solde_releve_banque__c/fields/numm__Date_du_solde__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_du_solde__c</fullName>
    <label>Date du solde</label>
    <required>true</required>
    <type>Date</type>
</CustomField>