force-app/main/default/objects/numm__Solde_releve_banque__c/fields/numm__Information_bancaire__c.field-meta.xml
<CustomField>
    <fullName>numm__Information_bancaire__c</fullName>
    <label>Information bancaire</label>
    <referenceTo>numm__InfosBank__c</referenceTo>
    <relationshipLabel>Soldes relevé de banque</relationshipLabel>
    <relationshipName>Soldes_releve_de_banque</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>