force-app/main/default/objects/numm__Solde_releve_banque__c/fields/numm__Solde__c.field-meta.xml
<CustomField>
    <fullName>numm__Solde__c</fullName>
    <label>Solde</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>