force-app/main/default/objects/numm__Solde_releve_banque__c/fields/numm__TECH_Unique__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Unique__c</fullName>
    <description>Contiendra les valeurs InformationBancaire.Id et DateDuSolde concaténées ; unique pour empêcher d&#39;importer plusieurs fois le même fichier.</description>
    <label>TECH Unique</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>